<resources>
    <string name="app_name">Sensor Flow</string>

    <!-- Statuses -->

    <string name="sensor_missing">Required Sensor Missing</string>
    <string name="sensor_missing_description">"An accelerometer is required to run this app.</string>
    <string name="disconnected_firebase">DISCONNECTED from FIREBASE</string>
    <string name="connected_firebase">CONNECTED to FIREBASE</string>

    <string name="samples_stored">Samples stored in the folder</string>
    <string name="login_firebase">Login into Firebase</string>
    <string name="no_files_in_directory">No files in this directory</string>
    <string name="not_reporting_firebase">Not reporting to Firebase</string>

    <string name="no_network">No internet connection</string>
    <string name="no_network_desc">Ups, it seems like you don\'t have Internet right now and we need that to log in. Check your connection and try again.</string>
    <string name="logged_out">Successful logout</string>
    <string name="logged_out_desc">You have successfully logged out. Wipe all your data or log back again if you need to.</string>
    <string name="file_name_conflict">File names conflict</string>
    <string name="file_name_conflict_desc">The file being saved shares name with a previously created one. Do you wish to override it, to append the new data to the file, or to cancel</string>
    <string name="problems_storing_samples">Problems storing the Samples in the folder</string>
    <string name="problems_no_samples_found">No samples found with this conditions</string>
    <string name="problems_no_valid_name">The file name is not valid</string>
    <string name="problems_try_again">A problem occurred, try again.</string>
    <string name="permission_missing_sd_write">Permission missing: External Storage - Write</string>
    <string name="incorrect_settings">Incorrect settings</string>

    <!-- Recognised & Format-->

    <string name="downstairs">Downstairs</string>
    <string name="jogging">Jogging</string>
    <string name="sitting">Sitting</string>
    <string name="standing">Standing</string>
    <string name="upstairs">Upstairs</string>
    <string name="walking">Walking</string>

    <string name="x" translatable="false">X</string>
    <string name="y" translatable="false">Y</string>
    <string name="z" translatable="false">Z</string>

    <string name="hour_unit">H</string>
    <string name="minute_unit">M</string>
    <string name="second_unit">S</string>

    <string name="csv" translatable="false">.csv</string>
    <string name="zero" translatable="false">0</string>
    <string name="no_content" translatable="false">-</string>

    <!-- Sensors -->

    <string name="sensors">Sensors</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="barometer">Barometer</string>
    <string name="magnetometer">Magnetometer</string>
    <string name="gyroscope">Gyroscope</string>

    <!-- Activities -->

    <string name="current_activity">Activity</string>

    <string name="recognised">Recognised</string>
    <string name="service_stopped">Service stopped</string>
    <string name="active_total">Active total</string>
    <string name="active_today">Active today</string>

    <string name="today">Today</string>
    <string name="scroll">Scroll</string>

    <string name="file">File</string>

    <string name="name">Name</string>
    <string name="folder">Folder</string>
    <string name="conflict">Conflict</string>
    <string name="append">Append</string>
    <string name="override">Override</string>
    <string-array name="conflict_types">        <!-- Indexes stored at Constants -->
        <item>WARN</item>
        <item>APPEND</item>
        <item>OVERRIDE</item>
    </string-array>

    <string name="settings">Settings</string>

    <string name="file_name_without_extension">File name w/o extension</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="no_date_set">No date set</string>
    <string name="remove_date_cont_desc">Remove date</string>
    <string name="samples">Samples</string>
    <string name="max_samples_hint">All samples if empty</string>
    <string name="max_samples">Samples maximum</string>
    <string name="at_folder">At folder</string>

    <!-- Menu -->

    <string name="firebase_log_in">Log into Firebase</string>
    <string name="firebase_log_out">Log out from Firebase</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="ui_disable">Disable UI updates</string>
    <string name="ui_enable">Enable UI updates</string>


    <string name="close_app">Close application</string>
    <string name="no_data">NO DATA</string>
    <string name="retry">Retry</string>
    <string name="wipe_exit"><![CDATA[Wipe & Exit]]></string>
    <string name="no_google_services">No Google Play Services available</string>
    <string name="no_google_services_desc">This app needs Google Play services for both Android Wear and Database Login, update or install Google Play Services and try again</string>
    <string name="permissions_required">Camera AND storage permission are required for this demo</string>

</resources>
