<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinatorDashboard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/sv_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/settings"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/at_folder"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/file"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--ContentDescription set programmatically-->

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/name"
                app:layout_constraintLeft_toLeftOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="14dp"
                android:text="@string/folder"
                app:layout_constraintLeft_toLeftOf="@+id/textView10"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <TextView
                android:id="@+id/tv_from_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/no_date_set"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/tv_to_date"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/tv_to_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginStart="8dp"
                android:text="@string/no_date_set"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintBottom_toBottomOf="@+id/textView3"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView6"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="@string/warn"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/spinner"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/spinner"
                android:layout_marginBottom="0dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/from"
                app:layout_constraintLeft_toLeftOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="16dp"
                android:text="@string/conflict"
                app:layout_constraintLeft_toLeftOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/to"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/samples"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <Switch
                android:id="@+id/s_scroll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:checked="true"
                app:layout_constraintBottom_toBottomOf="@+id/textView"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <EditText
                android:id="@+id/et_file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textUri|textPersonName"
                android:text="DataSet_12124123455"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintBottom_toBottomOf="@+id/textView10"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/et_folder_name"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView10" />

            <EditText
                android:id="@+id/et_folder_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textUri|textPersonName"
                android:text="SensorFlow_Export"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toRightOf="@+id/textView8"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView8"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp" />

            <EditText
                android:id="@+id/et_max_samples"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPersonName|number"
                android:text="40000"
                android:textAppearance="@style/TextAppearance.AppCompat.Menu"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintLeft_toLeftOf="@+id/tv_to_date"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView6" />

            <android.support.v7.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="32dp"
                app:layout_constraintLeft_toLeftOf="@+id/textView9"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_close_24dp"
                app:layout_constraintTop_toTopOf="@+id/tv_from_date"
                app:layout_constraintBottom_toBottomOf="@+id/tv_from_date"
                app:layout_constraintLeft_toRightOf="@+id/tv_from_date"
                android:layout_marginStart="8dp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/tv_to_date"
                app:layout_constraintLeft_toRightOf="@+id/tv_from_date"
                app:layout_constraintTop_toTopOf="@+id/tv_to_date"
                app:srcCompat="@drawable/ic_close_24dp"
                android:layout_marginStart="8dp" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="16dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/textView13"
                app:layout_constraintLeft_toLeftOf="@+id/et_max_samples"
                app:layout_constraintTop_toTopOf="@+id/textView13"
                style="@style/TextAppearance.AppCompat.Menu"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/saveFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        app:backgroundTint="@color/tealDark"
        app:layout_anchor="@id/sv_main"
        app:layout_anchorGravity="bottom|end|right"
        app:srcCompat="@drawable/ic_save_24dp" />

</android.support.design.widget.CoordinatorLayout>